# shepard

./: CLAUDE.md  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml
examples/: launcher.rs  pty_proxy.rs
src/: app.rs  config.rs  history.rs  input.rs  main.rs  pty_widget.rs  session.rs  session_manager.rs  status_socket.rs  ui.rs
src/session_manager/: mod.rs  session_pair.rs
src/session_manager/ui/: command_menu.rs  create_dialog.rs  delete_confirm.rs  help_popup.rs  kill_confirm.rs  main_view.rs  mod.rs  quit_confirm.rs  session_picker.rs  session_selector.rs  status_bar.rs  terminal_multiplexer.rs  worktree_cleanup.rs
src/workflows/: mod.rs  worktree.rs
