[package]
name = "shepard"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
anyhow = "1.0"
portable-pty = "0.9"
dirs = "6.0"
tattoy-wezterm-term = "0.1.0-fork.5"
nix = { version = "0.30", features = ["term", "signal", "process", "fs", "poll", "aio"] }
ratatui = "0.29"
signal-hook = "0.4.1"
