[package]
name = "shepard"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.9"
dirs = "6.0"
tattoy-wezterm-term = "0.1.0-fork.5"
nix = { version = "0.30", features = ["term", "signal", "process", "fs", "poll", "aio"] }
signal-hook = "0.4.1"
vt100 = "0.16.2"
arc-swap = "1.7"
ratatui = "0.30.0"
chrono = "0.4"
crossbeam-channel = "0.5"
